--- a/src/remote/libvirtd.service.in
+++ b/src/remote/libvirtd.service.in
@@ -21,8 +21,8 @@ Documentation=man:libvirtd(8)
 Documentation=https://libvirt.org
 
 [Service]
-Type=notify
-EnvironmentFile=-/etc/sysconfig/libvirtd
+Type=simple
+EnvironmentFile=-/etc/conf.d/libvirtd
 ExecStart=@sbindir@/libvirtd $LIBVIRTD_ARGS
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
