--- a/tools/virt-pki-validate.in
+++ b/tools/virt-pki-validate.in
@@ -294,24 +294,24 @@ fi
 
 if [ "$SERVER" = "1" ]
 then
-    if [ -r "$SYSCONFDIR"/sysconfig/libvirtd ]
+    if [ -r "$SYSCONFDIR"/conf.d/libvirtd ]
     then
-        if grep "^LIBVIRTD_ARGS.*--listen" "$SYSCONFDIR"/sysconfig/libvirtd \
+        if grep "^LIBVIRTD_ARGS.*--listen" "$SYSCONFDIR"/conf.d/libvirtd \
             >/dev/null 2>&1
         then
             :
         else
-            echo Make sure "$SYSCONFDIR"/sysconfig/libvirtd is setup to listen to
+            echo Make sure "$SYSCONFDIR"/conf.d/libvirtd is setup to listen to
             echo TCP/IP connections and restart the libvirtd service
         fi
     fi
-    if [ -r "$SYSCONFDIR"/sysconfig/iptables ]
+    if [ -r "$SYSCONFDIR"/conf.d/iptables ]
     then
-        if grep "$PORT" "$SYSCONFDIR"/sysconfig/iptables >/dev/null 2>&1
+        if grep "$PORT" "$SYSCONFDIR"/conf.d/iptables >/dev/null 2>&1
         then
             :
         else
-            echo Make sure "$SYSCONFDIR"/sysconfig/iptables is setup to allow
+            echo Make sure "$SYSCONFDIR"/conf.d/iptables is setup to allow
             echo incoming TCP/IP connections on port $PORT and
             echo restart the iptables service
         fi
